<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/help_background"
    tools:context="com.cmpt276.as3.zombiesseeker.HelpActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="26dp"
        android:text="@string/reference"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reference_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/welcome_background"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/reference_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/welcome_logo"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/reference_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/home_background"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/reference_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/play_button"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/reference_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/setting_button"
            android:textAppearance="?android:attr/textAppearanceSmall" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="300dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reference_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/help_button"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/reference_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/game_background"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/reference_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/zombie_head"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/reference_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/optional_background"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/reference_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/help_background"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="34dp"
        android:text="@string/back" />
</RelativeLayout>
