<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_background"
    tools:context="com.cmpt276.as3.zombiesseeker.OptionalActivity">

    <TextView
        android:id="@+id/textView"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="28dp"
        android:text="@string/board_size" />

    <RadioGroup
        android:id="@+id/board_size_radios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_marginEnd="32dp"
        android:layout_toStartOf="@+id/btn_ok"
        android:text="@string/zombies"
        android:textSize="17sp"
        tools:ignore="RelativeOverlap" />

    <RadioGroup
        android:id="@+id/num_zombie_radios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="105dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/btn_erase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_ok"
        android:layout_alignBottom="@+id/btn_ok"
        android:layout_alignStart="@+id/board_size_radios"
        android:text="@string/erase_times_played" />
</RelativeLayout>
