<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_background"
    tools:context="com.cmpt276.as3.zombiesseeker.PlayGameActivity">

    <TextView
        android:id="@+id/tv_zombie_left"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/wood_tag"
        android:text="@string/hello_world"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TableLayout
        android:id="@+id/btnsTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="30dp"
        android:layout_alignStart="@+id/tv_zombie_left"
        android:layout_below="@+id/tv_zombie_left"
        android:layout_above="@id/tv_totalGameCount"
        android:layout_marginTop="0dp"
        android:stretchColumns="*">

    </TableLayout>

    <TextView
        android:id="@+id/tv_countScan"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:gravity="center"


        android:layout_alignEnd="@+id/btnsTable"
        android:layout_alignTop="@+id/tv_zombie_left"
        android:background="@drawable/wood_tag"
        android:text="@string/scan_used_0"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_bestScore"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="3dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/wood_tag"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/tv_totalGameCount"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/wood_tag"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="#ffffff" />

</RelativeLayout>
